Remove unused MAVEN_OPTS
Illegal reflective access is permitted in JDK 9 by default
starting from b175.